validator_derive/tests/compile-fail/length/no_args.stderr
error: Invalid attribute #[validate] on field `s`: Validator `length` requires at least 1 argument out of `min`, `max` and `equal`
 --> $DIR/no_args.rs:5:5
  |
5 |     #[validate(length())]
  |     ^^^^^^^^^^^^^^^^^^^^^
